--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="first-block">
 		<div class="first-block__content"> <!-- почему-то если использовать тег <content> вместо <div>, стилизации не происходит -->
 			<div class="first-block__text first-block__text_size_h1"> 
-				Школа сноуборда <br> <!-- решил использовать <br> вместо фиксированной ширины для переноса на след строку -->
+				Школа сноуборда
 				и горных лыж
 			</div>
 			<div class="first-block__text first-block__text_size_h2">
@@ -42,8 +42,8 @@
 	</header>
 
 	<div class="uslugi-block">
-		<h1 class="h1">Наши услуги</h1>
-		<h2 class="h2">Для взрослых и детей 6+ / любого уровня подготовки</h2>
+		<h1 class="h1 uslugi-block__h1">Наши услуги</h1>
+		<h2 class="h2 uslugi-block__h2">Для взрослых и детей 6+ / любого уровня подготовки</h2>
 		<div class="uslugi-block__content">
 			<div class="uslugi-block__item">
 				<img src="pic/uslugi-block/uslugi-photo.png" alt="">
@@ -69,10 +69,10 @@
 			<div class="uslugi-block__item uslugi-item">
 				<h2 class="h2 uslugi-item__h2">Разовое посещение</h2>
 					<p class="uslugi-item__text">
-					Впервые здесь? Тогда эта возможность точно для вас. Приходите на разовое занятие <!-- <br> --> <!-- очень не хотелось этого делать, но добавил br, потом -->
+					Впервые здесь? Тогда эта возможность точно для вас. Приходите на разовое занятие 
 					и проникнетесь атмосферой школы, познакомитесь с инструкторами и узнаете о том, как проходит обучение. После занятия мы определим ваш уровень и прикинем план занятий</p>
 				<div class="uslugi-item__footer">
-						<h2 class="h2 h2_grey_theme"> 3 часа </h2>
+						<h2 class="h2 h2_theme_grey"> 3 часа </h2>
 						<img class="uslugi-item-footer__arrow-img" src="pic/uslugi-block/arrow.png" alt="">
 				</div>
 			</div>
@@ -91,7 +91,7 @@
 					материалов и видео-уроков от участников 
 					мировых чемпионатов, здесь вы узнаете все</p>
 				<div class="uslugi-item__footer">
-						<h2 class="h2 h2_grey_theme"> 10 занятий </h2>
+						<h2 class="h2 h2_theme_grey"> 10 занятий </h2>
 						<img class="uslugi-item-footer__arrow-img" src="pic/uslugi-block/arrow.png" alt="">
 				</div>
 			</div>				
@@ -100,7 +100,7 @@
 
 
 	<div class="why-we-block">
-		<h1 class="h1">Почему мы</h1>
+		<h1 class="h1 why-we-block__h1">Почему мы</h1>
 		<div class="why-we-block__content">
 			<div class="why-we-block__item">
 				<img class="why-we-block__item-icon" src="pic/why-we-block/like.png" alt="">
@@ -152,7 +152,7 @@
 				</p>
 			</div>	
 			<div class="skidki-block__item"У>
-				<h2 class="h2 h2_theme_white">Учись всей семьёй</h2>
+				<h2 class="h2 h2_theme_white">Учись всей семьей</h2>
 				<p class="skidki-block__text">
 				Покупай абонемент для себя и получи скидку <span class="any-text_color_green">15%</span> для ребенка	
 				</p>
